--- a/createCard.html
+++ b/createCard.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Card | PROADE BANK</title>
-    <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <body>
     <div class="w-50 d-block mx-auto">
         <input class="form-control my-2" type="number" placeholder="Phone Number" id="phoneNumber">
