--- a/bankSignUpPage.html
+++ b/bankSignUpPage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up | PROADE BANK</title>
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <style>
     @media (max-width: 768px) {
@@ -23,6 +24,7 @@
         <input type="email" placeholder="Email" id="eMail" class="form-control my-2">
         <input type="text" placeholder="Password" id="password" class="form-control my-2">
         <input type="number" placeholder="PIN" id="pin" minlength="4" maxlength="4" min="1000" max="9999" class="form-control my-2">
+        <p id="displayError" class="text-danger text-center"></p>
         <button onclick="signUp()" class="w-100 mx-auto btn btn-success">Sign Up</button>
         <a href="bankSignInPage.html">Go to Sign In</a>
     </div>
@@ -32,21 +34,39 @@
         if (localStorage.allBankUsers) {
             allBankUsers = JSON.parse(localStorage.getItem("allBankUsers"))
         }
+        let phoneNumberRegex = /^[\d]{11}$/
+        let eMailRegex = /^[\w]+[@][\w]{2,15}[.][\w]{2,15}([.][\w]{2,15})?$/
+        let pinRegex = /^[\d]{4}$/
         const signUp = ()=>{
-            let user = {
-                firstName: firstName.value,
-                lastName: lastName.value,
-                phoneNumber: phoneNumber.value,
-                eMail: eMail.value,
-                password: password.value,
-                pin: pin.value,
-                accountNumber: "911"+Math.round(Math.random()*10000000),
-                accountBalance: 0.00,
-                transactionHistory: []
-            }
-            allBankUsers.push(user)
-            localStorage.setItem("allBankUsers", JSON.stringify(allBankUsers))
-            window.location.href = "bankSignInPage.html"            
+            if (phoneNumberRegex.test(phoneNumber.value)) {
+                if (eMailRegex.test(eMail.value)) {
+                    if (pinRegex.test(pin.value)) {
+                        let user = {
+                        firstName: firstName.value,
+                        lastName: lastName.value,
+                        phoneNumber: phoneNumber.value,
+                        eMail: eMail.value,
+                        password: password.value,
+                        pin: pin.value,
+                        accountNumber: "911"+Math.round(Math.random()*10000000),
+                        accountBalance: 0.00,
+                        transactionHistory: []
+                        }
+                        allBankUsers.push(user)
+                        localStorage.setItem("allBankUsers", JSON.stringify(allBankUsers))
+                        window.location.href = "bankSignInPage.html" 
+                    } else{
+                    displayError.innerText = "Invaild PIN"
+                    setTimeout(()=>displayError.innerText="", 3000)
+                    } 
+                } else{
+                displayError.innerText = "Invaild e-mail"
+                setTimeout(()=>displayError.innerText="", 3000)
+                } 
+            } else{
+                displayError.innerText = "Invaild phone number"
+                setTimeout(()=>displayError.innerText="", 3000)
+            }         
         }
     </script>
 </body>
