--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     }
 </style>
 <body style="height: 100vh; width: 100vw;">
-    <div style="width: 35%; height: 90%;" class="bg-dark d-block mx-auto rounded-5 smallDeviceWidth">
-        <img src="../TODO APP/gift.png" alt="" class="h-75 w-75 mx-auto d-block">
+    <div style="width: 35%; height: 95%;" class="bg-dark d-block mx-auto rounded-5 smallDeviceWidth">
+        <img src="icon.png" alt="" class="h-75 w-75 mx-auto d-block">
         <h1 class="my-2 text-center text-light">Let's Start Something Big With Us</h1>
-        <div class="d-flex justify-content-center"><p class="text-light bg-info d-inline-block mx-auto bg-opacity-50 text-center p-1 rounded-3">Click Here To <a href="bankSignUpPage.html"><button class="btn btn-sm btn-info">Sign Up</button></a></p></div>
+        <div class="d-flex justify-content-center"><p class="text-light bg-info d-inline-block mx-auto bg-opacity-50 text-center p-1 rounded-3">Click Here To <a href="bankSignUpPage.html"><button class="btn btn-sm btn-info">Sign Up</button></a>or  <a href="bankSignInPage.html"><button class="btn btn-sm btn-info">Sign In</button></a></p></div>
     </div>
 </body>
 </html>
