--- a/bankHistoryPage.html
+++ b/bankHistoryPage.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>History | PROADE BANK</title>
+    <title id="title">History | PROADE BANK</title>
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <style>
     @media (max-width: 768px) {
@@ -15,12 +16,14 @@
 </style>
 <body style="height: 100vh;" onload="showHistory()">
     <div class="smallDeviceWidth h-100 w-50 bg-dark d-block mx-auto overflow-auto">
-        <h4 class="text-light">All Transaction History <a href="bankDashboard.html" class="float-end me-3">Go to dashboard</a></h4>
+        <h4 class="text-light">All Transaction History</h4>
+        <a href="bankDashboard.html" class="float-end me-3">Go to dashboard</a>
         <div id="display" class="mt-5"></div>
     </div>
     <script>
         let allBankUsers = JSON.parse(localStorage.getItem("allBankUsers"))
         let currentBankUserIndex = JSON.parse(localStorage.getItem("currentBankUserIndex"))
+        title.innerText = `${allBankUsers[currentBankUserIndex].firstName} | History - PROADE BANK`
         const showHistory = ()=>{
             allBankUsers[currentBankUserIndex].transactionHistory.reverse().map((history, index)=>{
                 display.innerHTML += `
