--- a/bankSignInPage.html
+++ b/bankSignInPage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In | PROADE BANK</title>
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <style>
     @media (max-width: 768px) {
@@ -21,6 +22,7 @@
         <input class="form-control my-2" type="text" placeholder="Email" id="eMail">
         <input class="form-control my-2" type="text" placeholder="Phone Number" id="phoneNumber">
         <input class="form-control my-2" type="text" placeholder="Password" id="password">
+        <p id="displayError" class="text-center text-danger"></p>
         <button onclick="signIn()" class="w-100 d-block mx-auto btn btn-success">Sign In</button>
         <a href="bankSignUpPage.html">Go to Sign Up</a>
     </div>
@@ -28,19 +30,32 @@
         let allBankUsers = JSON.parse(localStorage.getItem("allBankUsers"))
         let currentBankUserIndex = -200
         let correctUser = false
+        let phoneNumberRegex = /^[\d]{11}$/
+        let eMailRegex = /^[\w]+[@][\w]{2,15}[.][\w]{2,15}([.][\w]{2,15})?$/
+        let pinRegex = /^[\d]{4}$/
         const signIn =()=>{
-            allBankUsers.map((user, index)=>{
-                if (user.eMail==eMail.value && user.phoneNumber==phoneNumber.value && user.password==password.value) {
-                    currentBankUserIndex = index
-                    localStorage.setItem("currentBankUserIndex", JSON.stringify(currentBankUserIndex))
-                    correctUser = true
-                }
-            })
-            if (correctUser==true) {
-                window.location.href = "bankDashboard.html"
-            } else {
-                alert("User not found")
-            }
+            if (phoneNumberRegex.test(phoneNumber.value)) {
+                if (eMailRegex.test(eMail.value)) {
+                        allBankUsers.map((user, index)=>{
+                        if (user.eMail==eMail.value && user.phoneNumber==phoneNumber.value && user.password==password.value) {
+                            currentBankUserIndex = index
+                            localStorage.setItem("currentBankUserIndex", JSON.stringify(currentBankUserIndex))
+                            correctUser = true
+                        }
+                        })
+                        if (correctUser==true) {
+                            window.location.href = "bankDashboard.html"
+                        } else {
+                            alert("User not found")
+                        }     
+                    } else{
+                    displayError.innerText = "Invaild e-mail"
+                    setTimeout(()=>displayError.innerText="", 3000)
+                    } 
+            } else{
+                displayError.innerText = "Invaild phone number"
+                setTimeout(()=>displayError.innerText="", 3000)
+            }         
         }
     </script>
 </body>
