--- a/createCard.html
+++ b/createCard.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Card | PROADE BANK</title>
+    <title id="title">Create Card | PROADE BANK</title>
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <body>
     <div class="w-50 d-block mx-auto">
+        <marquee behavior="" direction=""><h1 class="text-success mt-5">Create Card</h1></marquee>
         <input class="form-control my-2" type="number" placeholder="Phone Number" id="phoneNumber">
         <input class="form-control my-2" type="text" placeholder="Password" id="password">
         <input class="form-control my-2" type="number" placeholder="Account Number" id="accountNumber">
         <input class="form-control my-2" type="number" placeholder="PIN" id="pin">
+        <p id="information" class="text-danger text-center"></p>
         <button class="w-50 d-block mx-auto btn btn-success" onclick="createCard()">Create</button>
         <a href="bankDashboard.html">Go to dashboard</a>
 
@@ -20,8 +23,13 @@
     <script>
         let allBankUsers = JSON.parse(localStorage.getItem("allBankUsers"))
         let currentBankUserIndex = JSON.parse(localStorage.getItem("currentBankUserIndex"))
+        title.innerText = `${allBankUsers[currentBankUserIndex].firstName} | Create Card - PROADE BANK`
         const createCard =()=>{
-            if (allBankUsers[currentBankUserIndex].phoneNumber==phoneNumber.value) {
+            if (allBankUsers[currentBankUserIndex].cardNumber) {
+                alert("User card exists")
+                window.location.href = "bankDashboard.html"
+            } else {
+                if (allBankUsers[currentBankUserIndex].phoneNumber==phoneNumber.value) {
                 if (allBankUsers[currentBankUserIndex].password==password.value) {
                     if (allBankUsers[currentBankUserIndex].accountNumber==accountNumber.value) {
                         if (allBankUsers[currentBankUserIndex].pin==pin.value) {
@@ -40,11 +48,25 @@
                             }
                             allBankUsers[currentBankUserIndex] = user
                             localStorage.setItem("allBankUsers", JSON.stringify(allBankUsers))
-                            alert("success")
-                        } else{alert("Wrong Pin")}
-                    } else{alert("Wrong account number")}
-                } else{alert("Wrong password")}
-            } else{alert("Wrong phone number")}
+                            information.innerText = "success"
+                        } else{
+                            information.innerText = "Wrong Pin"
+                            setTimeout(()=>{information.innerText=""}, 3000)
+                        }
+                    } else{
+                        information.innerText = "Wrong account number"
+                        setTimeout(()=>{information.innerText=""}, 3000)
+                    }
+                } else{
+                    information.innerText = "Wrong password"
+                    setTimeout(()=>{information.innerText=""}, 3000)
+                }
+            } else{
+                information.innerText = "Wrong phone number"
+                setTimeout(()=>{information.innerText=""}, 3000)
+            }
+
+            }
         }
     </script>
 </body>
