--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROADE BANK</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
 <style>
     @media (max-width: 800px){
         .smallDeviceWidth{
@@ -14,10 +15,10 @@
     }
 </style>
 <body style="height: 100vh; width: 100vw;">
-    <div style="width: 35%; height: 95%;" class="bg-dark d-block mx-auto rounded-5 smallDeviceWidth">
+    <div style="width: 35%; height: 95%;" class="bg-warning d-block mx-auto rounded-5 smallDeviceWidth">
         <img src="icon.png" alt="" class="h-75 w-75 mx-auto d-block">
         <h1 class="my-2 text-center text-light">Let's Start Something Big With Us</h1>
-        <div class="d-flex justify-content-center"><p class="text-light bg-info d-inline-block mx-auto bg-opacity-50 text-center p-1 rounded-3">Click Here To <a href="bankSignUpPage.html"><button class="btn btn-sm btn-info">Sign Up</button></a>or  <a href="bankSignInPage.html"><button class="btn btn-sm btn-info">Sign In</button></a></p></div>
+        <div class="d-flex justify-content-center"><p class="text-light bg-info d-inline-block mx-auto bg-opacity-50 text-center p-1 rounded-3">Click Here To <a href="bankSignUpPage.html"><button class="btn btn-sm btn-warning">Sign Up</button></a>or  <a href="bankSignInPage.html"><button class="btn btn-sm btn-warning">Sign In</button></a></p></div>
     </div>
 </body>
 </html>
