--- a/bankSignUpPage.html
+++ b/bankSignUpPage.html
@@ -1,76 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up | PROADE BANK</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
-<style>
-    @media (max-width: 768px) {
-        .smallDeviceWidth{
-            width: 80% !important;
+    <!-- <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <style>
+        @media (max-width: 768px) {
+            .smallDeviceWidth {
+                width: 80% !important;
+            }
         }
-    }
-</style>
-<body>
+
+        #passwordValidation {
+            text-align: center;
+            color: red;
+        }
+
+        #profileDiv {
+            background-position: 100% 100%;
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+        }
+    </style>
+
+<body onload="typeNote()">
     <div class="smallDeviceWidth w-50 d-block mx-auto">
-        <marquee behavior="" direction="left" class="my-5 mx-5"><h1>PROADE BANK</h1></marquee>
-        <h3 class="text-center">Sign Up Page</h3>
-        <input type="text" placeholder="First Name" id="firstName" class="form-control mt-3 my-2">
-        <input type="text" placeholder="Last Name" id="lastName" class="form-control my-2">
-        <input type="text" placeholder="Phone Number" id="phoneNumber" class="form-control my-2">
-        <input type="email" placeholder="Email" id="eMail" class="form-control my-2">
-        <input type="text" placeholder="Password" id="password" class="form-control my-2">
-        <input type="number" placeholder="PIN" id="pin" minlength="4" maxlength="4" min="1000" max="9999" class="form-control my-2">
+        <marquee behavior="" direction="left" class="my-5 mx-5">
+            <h1>PROADE BANK</h1>
+        </marquee>
+        <h3 class="text-center" id="welcomeNote"></h3>
+        <input name="firstName" type="text" placeholder="First Name" id="firstName" class="form-control mt-3 my-2">
+        <input name="lastName" type="text" placeholder="Last Name" id="lastName" class="form-control my-2">
+        <input name="phoneNumber" type="text" placeholder="Phone Number" id="phoneNumber" class="form-control my-2">
+        <input name="eMail" type="email" placeholder="Email" id="eMail" class="form-control my-2">
+        <input name="password" type="text" placeholder="Password" id="password" class="form-control my-2">
+        <p id="passwordValidation"></p>
+        <input name="pin" type="number" placeholder="PIN" id="pin" minlength="4" maxlength="4" min="1000" max="9999"
+            class="form-control my-2">
         <p id="displayError" class="text-danger text-center"></p>
+        <div class="w-100 row" style="height: 250px;">
+            <input type="file" accept=".jpeg, .jpg, .png" required class="form-control w-50 my-auto col-6"
+                id="profileImage">
+            <div id="profileDiv"
+                class="col-6 h-100 border border-2 rounded-circle bg-danger d-flex justify-content-center align-items-center">
+                <h1 class="text-center">Image</h1>
+            </div>
+        </div>
         <button onclick="signUp()" class="w-100 mx-auto btn btn-success">Sign Up</button>
         <a href="bankSignInPage.html">Go to Sign In</a>
     </div>
 
     <script>
+        let text = "Sign Up Page"
+        let i = 0
+        let speed = 100
+        const typeNote = () => {
+            if (i < text.length) {
+                welcomeNote.innerHTML += text.charAt(i);
+                i++;
+                setTimeout(()=> typeNote(), speed)
+                    }
+            update()
+        }
+        const update =()=>{
+            if (i == text.length) {
+                setTimeout(() => {
+                    welcomeNote.innerText = ""
+                    i=0
+                    typeNote()
+                }, 2000)
+            }
+        }
+
         let allBankUsers = []
+        let profileImg = null
         if (localStorage.allBankUsers) {
             allBankUsers = JSON.parse(localStorage.getItem("allBankUsers"))
         }
         let phoneNumberRegex = /^[\d]{11}$/
         let eMailRegex = /^[\w]+[@][\w]{2,15}[.][\w]{2,15}([.][\w]{2,15})?$/
         let pinRegex = /^[\d]{4}$/
-        const signUp = ()=>{
-            if (phoneNumberRegex.test(phoneNumber.value)) {
-                if (eMailRegex.test(eMail.value)) {
-                    if (pinRegex.test(pin.value)) {
-                        let user = {
-                        firstName: firstName.value,
-                        lastName: lastName.value,
-                        phoneNumber: phoneNumber.value,
-                        eMail: eMail.value,
-                        password: password.value,
-                        pin: pin.value,
-                        accountNumber: "911"+Math.round(Math.random()*10000000),
-                        accountBalance: 0.00,
-                        transactionHistory: [],
-                        request: [],
-                        wallets: []
-                        }
-                        allBankUsers.push(user)
-                        localStorage.setItem("allBankUsers", JSON.stringify(allBankUsers))
-                        window.location.href = "bankSignInPage.html" 
-                    } else{
-                    displayError.innerText = "Invaild PIN"
-                    setTimeout(()=>displayError.innerText="", 3000)
-                    } 
-                } else{
-                displayError.innerText = "Invaild e-mail"
-                setTimeout(()=>displayError.innerText="", 3000)
-                } 
-            } else{
-                displayError.innerText = "Invaild phone number"
-                setTimeout(()=>displayError.innerText="", 3000)
-            }         
+        let regex = {
+            phoneNumber: /^[\d]{11}$/,
+            eMail: /^[\w]+[@][\w]{2,15}[.][\w]{2,15}([.][\w]{2,15})?$/,
+            pin: /^[\d]{3}$/,
+            password: {
+                capitalLetter: /[A-Z]/g,
+                smallLetter: /[a-z]/g,
+                number: /[0-9]/g,
+                specailCharacter: /[!@#$?%${}()|~]/g
+            }
         }
+        // console.log(typeof(/^*[0-9]$/));
+        // if (passwordReex.capitalLetter.test('Adeoyjkrffsdjke07?')&&passwordReex.smallLetter.test('Adeoye07?')&&passwordReex.number.test('Adeoye07?')&&passwordReex.specailCharacter.test('Adeoye07?')) {
+        //     // alert("yessss")
+        // }
+        const signUp = () => {
+            if (profileImg != null) {
+                if (phoneNumberRegex.test(phoneNumber.value)) {
+                    if (eMailRegex.test(eMail.value)) {
+                        if (pinRegex.test(pin.value)) {
+                            let user = {
+                                firstName: firstName.value,
+                                lastName: lastName.value,
+                                phoneNumber: phoneNumber.value,
+                                eMail: eMail.value,
+                                profileImg: profileImg,
+                                password: password.value,
+                                pin: pin.value,
+                                accountNumber: "911" + Math.round(Math.random() * 10000000),
+                                accountBalance: 0.00,
+                                transactionHistory: [],
+                                request: [],
+                                wallets: []
+                            }
+                            allBankUsers.push(user)
+                            localStorage.setItem("allBankUsers", JSON.stringify(allBankUsers))
+                            window.location.href = "bankSignInPage.html"
+                        } else {
+                            displayError.innerText = "Invaild PIN"
+                            setTimeout(() => displayError.innerText = "", 3000)
+                        }
+                    } else {
+                        displayError.innerText = "Invaild e-mail"
+                        setTimeout(() => displayError.innerText = "", 3000)
+                    }
+                } else {
+                    displayError.innerText = "Invaild phone number"
+                    setTimeout(() => displayError.innerText = "", 3000)
+                }
+            } else {
+                displayError.innerText = "Please select an image for your profile"
+                setTimeout(() => displayError.innerText = "", 3000)
+            }
+
+        }
+
+        // const validate =(e)=>{
+        //     // e.target.name
+        //     // e.target.value
+        //     checkRegex(e.target.name, e.target)
+        // }
+        // const checkRegex =(name, element)=>{
+        //     console.log(name, element)
+        //     if (name=="password") {
+        //         if (regex[`${name}`].capitalLetter.test(element.value)&&regex[`${name}`].smallLetter.test(element.value)&&regex[`${name}`].number.test(element.value)&&regex[`${name}`].specailCharacter.test(element.value)) {
+        //             element.classList.add("is-valid")
+        //             element.classList.remove("is-invalid")
+        //         } else{
+        //             element.classList.add("is-invalid")
+        //             element.classList.remove("is-valid")
+        //         }
+        //     } else{
+        //         if (regex[`${name}`].test(element.value)) {
+        //             element.classList.add("is-valid")
+        //             // element.classList.remove("is-invalid")
+        //         } else{
+        //             element.classList.add("is-invalid")
+        //             // element.classList.remove("is-valid")
+        //         }
+        //     }
+        // }
+
+        document.getElementById("profileImage").addEventListener('change', () => {
+            const file = profileImage.files[0]
+            const reader = new FileReader()
+
+            reader.addEventListener('load', () => {
+                profileDiv.style.backgroundImage = `url(${reader.result})`
+                profileDiv.innerHTML = ""
+                profileImg = reader.result
+            })
+            reader.readAsDataURL(file)
+        })
     </script>
 </body>
+
 </html>
