--- a/bankWallet.html
+++ b/bankWallet.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wallets</title>
-    <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css"> -->
     <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
     <script src="./CHART JS/chart.js"></script>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <style>
     * {
@@ -106,7 +106,7 @@
             <h5 class="ms-5 text-warning d-inline-block">Wallets</h5>
             <button class="btn btn-success ms-auto d-block me-5" onclick="openCreateWallet()">Create New
                 Wallets</button>
-            <button onclick="viewSmallChart()" class="d-inline me-3 d-md-none">View Chart</button>
+            <button onclick="viewSmallChart()" class="btn btn-success d-inline mx-3 d-md-none">View Chart</button>
             <p class="ms-5">Total Wallets Balance <span id="totalWalletBalance"></span></p>
         </div>
     </div>
@@ -120,7 +120,7 @@
                 <option value="bar">Bar Chart</option>
                 <option value="line">Line Chart</option>
             </select>
-            <canvas id="walletChart" width="400" height="400" style="border: 2px solid red;"></canvas>
+            <canvas class="walletChart" style="border: 2px solid red; height: 2oopx; width: 200px;"></canvas>
         </div>
     </div>
 
@@ -161,11 +161,12 @@
             <button type="button" class="btn-close ms-auto d-block my-2" onclick="closeSmallChart()"
                 aria-label="Close"></button>
             <div id="smallView">
-                <canvas id="walletChart" width="400" height="400" style="border: 2px solid red;"></canvas>
+                <canvas class="walletChart d-block mx-auto" width="400" height="400" style="border: 2px solid red;"></canvas>
             </div>
             <button type="button" id="button1" onclick="closeSmallChart()">Close</button>
         </div>
     </div>
+    
     <script>
         let allBankUsers = JSON.parse(localStorage.getItem("allBankUsers"))
         let currentBankUserIndex = JSON.parse(localStorage.getItem("currentBankUserIndex"))
@@ -288,9 +289,10 @@
                 xValues.push(wallet.walletName)
                 yValues.push(wallet.walletBalance)
             })
-
-            if (yValues.length>0) {
-                new Chart("walletChart", {
+            // let allChart = document.querySelectorAll(".walletChart")
+            document.querySelectorAll(".walletChart").forEach(element => {
+                if (yValues.length>0) {
+                new Chart(element, {
                     type: `${chartTypes}`,
                     data: {
                         labels: xValues,
@@ -317,6 +319,7 @@
                 ctx.fillText(`You have no wallet created`, canvas.width/2, canvas.height/2);
                 ctx.fillText(`Your wallet chart will be displayed here`, canvas.width/2, (canvas.height/2)+40);
             }
+            })
         }
 
         document.getElementById("chartType").addEventListener("change", () => {
