--- a/createCard.html
+++ b/createCard.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Create Card | PROADE BANK</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
+    <!-- <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <body>
     <div class="w-50 d-block mx-auto">
         <marquee behavior="" direction=""><h1 class="text-success mt-5">Create Card</h1></marquee>
@@ -66,8 +66,9 @@
                                 accountBalance: allBankUsers[currentBankUserIndex].accountBalance,
                                 transactionHistory: allBankUsers[currentBankUserIndex].transactionHistory,
                                 cardNumber: cardNumber,
-                                request: [],
-                                wallets: []
+                                request: allBankUsers[currentBankUserIndex].request,
+                                wallets: allBankUsers[currentBankUserIndex].wallets,
+                                profileImg: allBankUsers[currentBankUserIndex].profileImg
                             }
                             allBankUsers[currentBankUserIndex] = user
                             localStorage.setItem("allBankUsers", JSON.stringify(allBankUsers))
