Making some changes to the user interface

--- a/bankSignUpPage.html
+++ b/bankSignUpPage.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up | PROADE BANK</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
     <style>
         @media (max-width: 768px) {
             .smallDeviceWidth {
@@ -38,7 +38,7 @@
         <input name="lastName" type="text" placeholder="Last Name" id="lastName" class="form-control my-2">
         <input name="phoneNumber" type="text" placeholder="Phone Number" id="phoneNumber" class="form-control my-2">
         <input name="eMail" type="email" placeholder="Email" id="eMail" class="form-control my-2">
-        <input name="password" type="text" placeholder="Password" id="password" class="form-control my-2">
+        <input name="password" type="password" placeholder="Password" id="password" class="form-control my-2">
         <p id="passwordValidation"></p>
         <input name="pin" type="number" placeholder="PIN" id="pin" minlength="4" maxlength="4" min="1000" max="9999"
             class="form-control my-2">
