--- a/bankDashboard.html
+++ b/bankDashboard.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Home Page</title>
     <link rel="shortcut icon" href="" id="favicon" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
     <link href="fontawesome-free-6.1.1-web/css/all.min.css" rel="stylesheet" />
     <script src="./CHART JS/chart.js"></script>
     <style>
@@ -112,10 +113,8 @@
 
 <body style="overflow-x: hidden;" onload="displayDetails()" class="row bg-warning position-relative">
     <div style="height: 100vh;" class="smallDeviceWidth bg-warning h-100 col-12 col-md-5">
-        <div onclick="window.location.href='bankProfile.html'" class="pt-3"><img src="" id="profileImage" alt="" style="height: 50px; width: 50px; border-radius: 50%;"
-                class="ms-5 me-2">
-            <h2 class="text-light d-inline" id="bankUserName"></h2><button class="ms-auto me-3 btn btn-info d-block"
-                onclick="signOut()">Sign Out</button>
+        <div class="pt-3 hand"><img onclick="window.location.href='bankProfile.html'" src="" id="profileImage" alt="" style="height: 50px; width: 50px; border-radius: 50%;" class="ms-5 me-2">
+            <h2 onclick="window.location.href='bankProfile.html'" class="text-light d-inline" id="bankUserName"></h2><button class="ms-auto me-3 btn btn-info d-block" onclick="signOut()">Sign Out</button>
         </div>
         <div>
             <p class="text-light ms-5">Total Balance <span class="float-end me-6 hand">Main Balance</span></p>
@@ -133,7 +132,7 @@
             </div>
         </div>
         <p class="text-light text-center">Account Number: <span id="accountNumber"></span></p>
-        <p>Transact</p>
+        <p class=" text-center" style="font-weight: bolder; text-decoration: underline 3px;">Carry Out Transaction</p>
         <div class="d-flex justify-content-around">
             <div onclick="deposit()" class="hand">
                 <img src="deposit.png" alt="" style="height: 50px; width: 50px;" class="mx-auto d-block">
@@ -304,6 +303,7 @@
                     requestAmount = request.requestAmount
                     requestName = request.requestName
                     userIndex = request.userIndex
+                    
                 })
             } else {
                 displayRequest.innerHTML = `
