--- a/bankProfile.html
+++ b/bankProfile.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title"></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
     <link href="fontawesome-free-6.1.1-web/css/all.min.css" rel="stylesheet" />
 </head>
 <style>
@@ -110,9 +111,21 @@
             accNumber.innerHTML = `Account Number: <span class="float-end me-3">${user.accountNumber}</span><span onclick="copyAccountNumber(event)" class="fa fa-copy float-end me-3"></span>`
             email.innerHTML = `E-mail: <span class="float-end me-3">${user.eMail}</span>`
             phoneNo.innerHTML = `Phone-no: <span class="float-end me-3">${user.phoneNumber}</span>`
-            sex.innerHTML = `Gender: <span class="float-end me-3">${user.gender}</span>`
-            dateOB.innerHTML = `D.O.B: <span class="float-end me-3">${user.dob}</span>`
-            addres.innerHTML = `Address: <span class="float-end me-3">${user.address}</span>`
+            if (user.gender!="" && user.gender!=undefined) {
+                sex.innerHTML = `Gender: <span class="float-end me-3">${user.gender.toUpperCase()}</span>`
+            } else{
+                sex.innerHTML = `Gender: <span class="float-end me-3">Null</span>`
+            }
+            if (user.dob!="" && user.dob!=undefined) {
+                dateOB.innerHTML = `D.O.B: <span class="float-end me-3">${user.dob}</span>`
+            } else{
+                dateOB.innerHTML = `D.O.B: <span class="float-end me-3">Null</span>`
+            }
+            if (user.address!="" && user.address!=undefined) {
+                addres.innerHTML = `Address: <span class="float-end me-3">${user.address}</span>`
+            } else{
+                addres.innerHTML = `Address: <span class="float-end me-3">Null</span>`
+            }
         }
 
         const displayUserEdit =()=>{
