--- a/bankSignInPage.html
+++ b/bankSignInPage.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In | PROADE BANK</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
 <style>
     @media (max-width: 768px) {
         .smallDeviceWidth{
@@ -22,7 +22,7 @@
         <h3 class="text-center">Sign In Page</h3>
         <input class="form-control my-2" type="text" placeholder="Email" id="eMail">
         <input class="form-control my-2" type="text" placeholder="Phone Number" id="phoneNumber">
-        <input class="form-control my-2" type="text" placeholder="Password" id="password">
+        <input class="form-control my-2" type="password" placeholder="Password" id="password">
         <p id="displayError" class="text-center text-danger"></p>
         <button onclick="signIn()" class="w-100 d-block mx-auto btn btn-success">Sign In</button>
         <a href="bankSignUpPage.html">Go to Sign Up</a>
@@ -41,7 +41,7 @@
                         if (user.eMail==eMail.value && user.phoneNumber==phoneNumber.value && user.password==password.value) {
                             currentBankUserIndex = index
                             localStorage.setItem("currentBankUserIndex", JSON.stringify(currentBankUserIndex))
-                            correctUser = true
+                            correctUser = true;
                         }
                         })
                         if (correctUser==true) {
