--- a/bankWallet.html
+++ b/bankWallet.html
@@ -104,8 +104,7 @@
         <div>
             <h3 id="userName" class="ms-5 "></h3>
             <h5 class="ms-5 text-warning d-inline-block">Wallets</h5>
-            <button class="btn btn-success ms-auto d-block me-5" onclick="openCreateWallet()">Create New
-                Wallets</button>
+            <button class="btn btn-success ms-auto d-block me-5" onclick="openCreateWallet()">Create New Wallets</button>
             <button onclick="viewSmallChart()" class="btn btn-success d-inline mx-3 d-md-none">View Chart</button>
             <p class="ms-5">Total Wallets Balance <span id="totalWalletBalance"></span></p>
         </div>
@@ -151,7 +150,7 @@
         <div class="popup" id="popup3">
             <button type="button" class="btn-close ms-auto d-block my-2" onclick="deleteWallet()"
                 aria-label="Close"></button>
-            <p class="text-danger">Are you sure you want to delte this wallet? Your wallet balance will be added to your
+            <p class="text-danger">Are you sure you want to delete this wallet? Your wallet balance will be added to your
                 main account balance</p>
             <button type="button" id="button1" onclick="deleteWallet2(walletIndex)">Delete Wallet</button>
         </div>
