--- a/bankHistoryPage.html
+++ b/bankHistoryPage.html
@@ -93,7 +93,7 @@
             font-size: 10px;
         }
     </style>
-<body style="height: 100vh;" onload="showHistory()">
+<body style="height: 100vh; overflow-y: hidden;" onload="showHistory()">
     <div class="smallDeviceWidth h-100 w-50 bg-info d-block mx-auto overflow-auto">
         <h4 class="text-light">All Transaction History</h4>
         <p class="float-end">Go to <a href="bankDashboard.html" class="text-decoration-none text-light me-3">Dashboard</a></p>
