--- a/bankSignUpPage.html
+++ b/bankSignUpPage.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up | PROADE BANK</title>
+    <title>Sign Up | Finova Bank</title>
     <link rel="shortcut icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
     <style>
         @media (max-width: 768px) {
             .smallDeviceWidth {
@@ -27,13 +26,15 @@
             background-size: 100% 100%;
         }
     </style>
+</head>
 
 <body onload="typeNote()">
     <div class="smallDeviceWidth w-50 d-block mx-auto">
         <marquee behavior="" direction="left" class="my-5 mx-5">
-            <h1>PROADE BANK</h1>
+            <h1>Welcome to Finova Bank</h1>
         </marquee>
         <h3 class="text-center" id="welcomeNote"></h3>
+        <p class="lead text-center mb-4">Your Gateway to Modern Banking Solutions</p>
         <input name="firstName" type="text" placeholder="First Name" id="firstName" class="form-control mt-3 my-2">
         <input name="lastName" type="text" placeholder="Last Name" id="lastName" class="form-control my-2">
         <input name="phoneNumber" type="text" placeholder="Phone Number" id="phoneNumber" class="form-control my-2">
@@ -48,30 +49,31 @@
                 id="profileImage">
             <div id="profileDiv"
                 class="col-6 h-100 border border-2 rounded-circle bg-danger d-flex justify-content-center align-items-center">
-                <h1 class="text-center">Image</h1>
+                <h1 class="text-center">Profile Image</h1>
             </div>
         </div>
         <button onclick="signUp()" class="w-100 mx-auto btn btn-success">Sign Up</button>
-        <a href="bankSignInPage.html">Go to Sign In</a>
+        <p class="text-center mt-3">Already have an account? <a href="bankSignInPage.html">Sign In</a></p>
     </div>
 
     <script>
-        let text = "Sign Up Page"
+        let text = "Welcome to Finova Bank - Sign Up"
         let i = 0
         let speed = 100
         const typeNote = () => {
             if (i < text.length) {
                 welcomeNote.innerHTML += text.charAt(i);
                 i++;
-                setTimeout(()=> typeNote(), speed)
-                    }
+                setTimeout(() => typeNote(), speed)
+            }
             update()
         }
-        const update =()=>{
+
+        const update = () => {
             if (i == text.length) {
                 setTimeout(() => {
                     welcomeNote.innerText = ""
-                    i=0
+                    i = 0
                     typeNote()
                 }, 2000)
             }
@@ -96,10 +98,7 @@
                 specailCharacter: /[!@#$?%${}()|~]/g
             }
         }
-        // console.log(typeof(/^*[0-9]$/));
-        // if (passwordReex.capitalLetter.test('Adeoyjkrffsdjke07?')&&passwordReex.smallLetter.test('Adeoye07?')&&passwordReex.number.test('Adeoye07?')&&passwordReex.specailCharacter.test('Adeoye07?')) {
-        //     // alert("yessss")
-        // }
+
         const signUp = () => {
             if (profileImg != null) {
                 if (phoneNumberRegex.test(phoneNumber.value)) {
@@ -123,49 +122,22 @@
                             localStorage.setItem("allBankUsers", JSON.stringify(allBankUsers))
                             window.location.href = "bankSignInPage.html"
                         } else {
-                            displayError.innerText = "Invaild PIN"
+                            displayError.innerText = "Invalid PIN"
                             setTimeout(() => displayError.innerText = "", 3000)
                         }
                     } else {
-                        displayError.innerText = "Invaild e-mail"
+                        displayError.innerText = "Invalid email"
                         setTimeout(() => displayError.innerText = "", 3000)
                     }
                 } else {
-                    displayError.innerText = "Invaild phone number"
+                    displayError.innerText = "Invalid phone number"
                     setTimeout(() => displayError.innerText = "", 3000)
                 }
             } else {
                 displayError.innerText = "Please select an image for your profile"
                 setTimeout(() => displayError.innerText = "", 3000)
             }
-
         }
-
-        // const validate =(e)=>{
-        //     // e.target.name
-        //     // e.target.value
-        //     checkRegex(e.target.name, e.target)
-        // }
-        // const checkRegex =(name, element)=>{
-        //     console.log(name, element)
-        //     if (name=="password") {
-        //         if (regex[`${name}`].capitalLetter.test(element.value)&&regex[`${name}`].smallLetter.test(element.value)&&regex[`${name}`].number.test(element.value)&&regex[`${name}`].specailCharacter.test(element.value)) {
-        //             element.classList.add("is-valid")
-        //             element.classList.remove("is-invalid")
-        //         } else{
-        //             element.classList.add("is-invalid")
-        //             element.classList.remove("is-valid")
-        //         }
-        //     } else{
-        //         if (regex[`${name}`].test(element.value)) {
-        //             element.classList.add("is-valid")
-        //             // element.classList.remove("is-invalid")
-        //         } else{
-        //             element.classList.add("is-invalid")
-        //             // element.classList.remove("is-valid")
-        //         }
-        //     }
-        // }
 
         document.getElementById("profileImage").addEventListener('change', () => {
             const file = profileImage.files[0]
